H3CIPMSJAVA-20180830/src/objects/Case_Voice__c.object
<CustomObject>
    <fields>
        <fullName>CSC_Voice_Recording__c</fullName>
        <description>电话录音</description>
        <label>Voice Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Case Voice</relationshipLabel>
        <relationshipName>Case_Voice</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By Profile</label>
        <type>Text</type>
    </fields>
    <label>Case Voice</label>
    <nameField>
        <label>Voice ID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>